# molao

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
apps/web/: .eslintrc.cjs  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: api.ts  app.tsx  env.d.ts  main.tsx  registry.ts  router.ts  styles.css  useAsync.ts
apps/web/src/components/: Graph.tsx  atoms.tsx
apps/web/src/demo/: api.ts  corpus.ts  courts.ts  extract.ts
apps/web/src/screens/: Case.tsx  Search.tsx  Status.tsx
crates/molao-cite/: Cargo.toml
crates/molao-cite/src/: lib.rs  series.rs
crates/molao-core/: Cargo.toml
crates/molao-core/src/: court.rs  doc.rs  lib.rs  region.rs  release.rs
crates/molao-corpus/: Cargo.toml
crates/molao-corpus/src/: error.rs  ingest.rs  lib.rs  schema.rs  search.rs
crates/molao-corpus/tests/: search.rs
crates/molao-dist/: Cargo.toml
crates/molao-dist/src/: bencode.rs  delta.rs  layout.rs  lib.rs  package.rs  torrent.rs  verify.rs
crates/molao-dist/src/transport/: fs.rs  iroh.rs  mod.rs
crates/molao-graph/: Cargo.toml
crates/molao-graph/src/: lib.rs  treatment.rs
crates/molao-index/: Cargo.toml
crates/molao-index/src/: chunk.rs  descriptor.rs  embed.rs  error.rs  lib.rs  store.rs
crates/molao-ingest/: Cargo.toml
crates/molao-ingest/fixtures/akn/: zacc_2026_26.xml  zagpphc_2025_112.xml
crates/molao-ingest/fixtures/html/: gazette_notice.html
crates/molao-ingest/src/: adapter.rs  akn.rs  clock.rs  fetch.rs  html.rs  lib.rs  peachjam.rs  robots.rs  signals.rs  witness.rs
crates/molao-ingest/tests/: end_to_end.rs
crates/molao-node/: Cargo.toml  build.rs
crates/molao-node/src/: api.rs  assets.rs  demo.rs  lib.rs  main.rs  verify.rs
crates/molao-node/tests/: api.rs  cli.rs
docs/: CITATIONS.md  CONTENT-SIGNALS.md  COURTS.md  DISTRIBUTION.md  FAQ.md  RELEASES.md  SOURCE-MAP.md  SOURCES.md  THREAT-MODEL.md
legacy/caseon-mono/: .firebaserc  .gitignore  cloudbuild.yaml  dummy_data.sql  index.html  package-lock.json  package.json  test.txt
legacy/caseon-mono/.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
legacy/caseon-mono/backend/embeddings/: README_QDRANT.md  count_points.py  delete_all_items.py  download_files.py  failed_files.txt  main.py  processed_files.txt  query_random_item.py  query_unique_files.py  requirements.txt  test_batch_efficiency.py
legacy/caseon-mono/backend/pdf_to_txt/: pdf_to_txt.py  test_single_pdf.py
legacy/caseon-mono/backend/runpod/: Dockerfile  main.py
legacy/caseon-mono/backend/scraper/: base_urls_2025-05-20.txt  base_urls_2025-06-17.txt  go.mod  go.sum
legacy/caseon-mono/backend/scraper/collect/: main.go
legacy/caseon-mono/backend/scraper/rtf_converter/: main.go  rtf_converter.py
legacy/caseon-mono/backend/scraper/scrape/: main.go
legacy/caseon-mono/backend/service/: .dockerignore  Dockerfile  b.sql  c.sql  func.sql  requirements.txt
legacy/caseon-mono/backend/service/modal/: deploy.py  setup_secrets.py  upload_models.sh
legacy/caseon-mono/backend/service/runpod/: Dockerfile  main.py  requirements.txt  rp_handler.py
legacy/caseon-mono/backend/summary/: README.md  main.py  main_gemini.py  requirements_gemini.txt  test_db.py
legacy/caseon-mono/backend/summary/extract_location_text_pdf/: ocr_pdf_search.py  pdfplumber_search.py  requirements.txt  section_pdf.py  simple_pdf_search.py  simple_unified_search.py
legacy/caseon-mono/backend/test/: main.py  requirements.txt
legacy/caseon-mono/backend/turso/: README.md  go.mod  go.sum
legacy/caseon-mono/backend/turso/create/: create.go
legacy/caseon-mono/backend/turso/migrate/: migrate.go
legacy/caseon-mono/backend/vertex/: Dockerfile  main.py  model_loader.py  requirements.txt  run.sh  test.txt
legacy/caseon-mono/public/: robots.txt  sitemap.xml
legacy/caseon-mono/sql/: files.sql  files_turso.sql  profiles.sql
legacy/caseon-mono/src/: index.css  main.jsx  routes.jsx
legacy/caseon-mono/src/components/: invite-dialog.jsx  logo.jsx  markdown-renderer.jsx  pdf-renderer.jsx  pdf-viewer.jsx
legacy/caseon-mono/src/components/auth/: protected-route.jsx
legacy/caseon-mono/src/components/layout/: auth-layout.jsx  main-layout.jsx
legacy/caseon-mono/src/components/legal/: legal-header.jsx  legal-section.jsx  table-of-contents.jsx
legacy/caseon-mono/src/components/nav/: company-name.jsx  guest-footer.jsx  guest-header.jsx  host-dropdown.jsx  (+1 more)
legacy/caseon-mono/src/context/: auth-context.jsx
legacy/caseon-mono/src/services/: paystack.jsx
legacy/caseon-mono/supabase/functions/: a.sql  func.sql  invoices.sql  user-signup.sql
legacy/caseon-mono/supabase/migrations/: add_check_invites_rpc.sql  add_payment_failed_columns.sql
legacy/nuamic-back/: Dockerfile  cloudbuild.yml  main.py  requirements.txt
legacy/nuamic-back/embedding/: main.py
legacy/nuamic-mono/: .firebaserc  .gitignore  index.html  package-lock.json  package.json
legacy/nuamic-mono/.github/workflows/: firebase.yml
legacy/nuamic-mono/scraper/: asdsaasa.txt  case_urls_2025-01-29-rev.txt  case_urls_2025-01-29.txt  go.mod  go.sum  main.go.working.txt
legacy/nuamic-mono/scraper/cmd/: main.go  proxyManager.go  utils.go
legacy/nuamic-mono/src/: App.jsx  index.css  routes.jsx
legacy/nuamic-mono/src/context/: auth-context.jsx
paperwork/: README.md  court-direct-permission-request.md  laws-africa-bulk-licence-request.md  ogl-ccby-reuse-confirmation.md  uk-tna-find-case-law-computational-licence.md
profiles/: README.md  bw.toml  generic.toml  gh.toml  ke.toml  ls.toml  mw.toml  na.toml  ng.toml  sz.toml  tz.toml  ug.toml  za.toml  zm.toml  zw.toml
scripts/: screenshots.mjs  sync-site-docs.mjs
site/: docs.html  index.html
site/docs/: api.md  architecture.md  changelog.md  citations.md  contributing.md  courts.md  distribution.md  faq.md  getting-started.md  governance.md  provenance.md  rag.md  releases.md  roadmap.md  running-a-node.md  screenshots.md  security.md  source-map.md  sources.md  threat-model.md
(+79 files in other folders)
