[package]
name = "molao-cite"
description = "Deterministic legal citation parser — neutral, reported, and case-number citations extracted from judgment text, driven by region profiles."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
molao-core.workspace = true
regex.workspace = true
serde.workspace = true
