[package]
name = "molao-core"
description = "Core types for Molao: document identity, court registry, provenance, and threshold-signed releases."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
