[package]
name = "molao-dist"
description = "Content-addressed release packaging, torrent v2 export, delta sync, and transport for Molao releases — the layer that makes a signed manifest safe to move over any transport."
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/vul-os/molao"
authors = ["Molao contributors"]

[dependencies]
molao-core = { path = "../molao-core" }
blake3 = "1.5"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# BitTorrent v2 (BEP 52) mandates SHA-256 piece hashing for interop with real
# torrent clients, independent of the BLAKE3 content addresses used
# everywhere else in this crate. See src/torrent.rs.
sha2 = "0.10"

# iroh transport — feature-gated scaffold, never part of the default build or
# test path (see src/transport/iroh.rs for why).
iroh = { version = "1.0", optional = true }
iroh-blobs = { version = "0.103", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[features]
default = []
iroh = ["dep:iroh", "dep:iroh-blobs", "dep:tokio"]

[dev-dependencies]
tempfile = "3"
ed25519-dalek = { version = "2", features = ["rand_core"] }

[lints.rust]
unsafe_code = "forbid"
