[package]
name = "molao-index"
description = "Local, rebuildable hybrid search index for Molao: FTS5 keywords + exact-cosine vectors in a single sidecar SQLite file, model-tagged by a reproducible descriptor. An unsigned cache, never part of a release."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
molao-corpus.workspace = true
blake3.workspace = true
hex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
